--- a/webgl/tut.html
+++ b/webgl/tut.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><title>Robots</title></head>
+<head><title>OpenGL Tutorial</title></head>
 <body>
 <div>
     <canvas id="robot_canvas" width=600 height=400></canvas>
@@ -33,7 +33,8 @@ ASDF...
         vColor = aVertexColor;
     }
 </script>
-<script src="robots.coffee" type="text/coffeescript"></script>
+<script src="tut.coffee" type="text/coffeescript"></script>
 <script src="coffee-script.js"></script>
 </body>
 </html>
+
