--- a/webgl/robots.html
+++ b/webgl/robots.html
@@ -13,7 +13,7 @@ ASDF...
     precision highp float;
     #endif
 
-    varying vec4 vColor;
+    uniform vec4 vColor;
 
     void main(void) {
         gl_FragColor = vColor;
@@ -21,16 +21,12 @@ ASDF...
 </script>
 <script id="shader-vs" type="x-shader/x-vertex">
     attribute vec3 aVertexPosition;
-    attribute vec4 aVertexColor;
 
     uniform mat4 uMVMatrix;
     uniform mat4 uPMatrix;
 
-    varying vec4 vColor;
-
     void main(void) {
         gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
-        vColor = aVertexColor;
     }
 </script>
 <script src="robots.coffee" type="text/coffeescript"></script>
