Modified look a bit and disabled alerts

--- a/webgl/robots.html
+++ b/webgl/robots.html
@@ -2,10 +2,8 @@
 <html>
 <head><title>Robots</title></head>
 <body>
-<div>
-    <canvas id="robot_canvas" width=800 height=600></canvas>
-</div>
-ASDF...
+<canvas id="robot_canvas" width=600 height=300 style="background-color: #ffe; border: 1px solid black;"></canvas>
+asdf
 <script src="glMatrix-0.9.5.min.js"></script>
 <script src="RequestAnimationFrame.js"></script>
 <script id="shader-fs" type="x-shader/x-fragment">
